aachart/testsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-test
  labels:
    app: myapp-test-service
spec:
  type: "LoadBalancer"
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: aa-angularnode-dev-aadev
